--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,7 @@
   "authors": [
     {
       "name": "Brandon Kelly",
-      "email": "brandon@pixelandtonic.com",
+      "email": "brandon@pixelandtonic.com"
     },
     {
       "name": "Brad Bell",
